Fix for layout shifts

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -293,7 +293,6 @@ thead > tr > td {
 
 .newGrid {
 	border-color: red;
-	border-width: 2px;
 }
 
 #country {
